# cpg-flow-stripy

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  README.md  index_template.html  pyproject.toml  results_template.html
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  test.yaml
src/cpg_flow_stripy/: config_template.toml  default_config.toml  index_template.html  results_template.html  run_workflow.py  stages.py  stripy_report_template.html  utils.py
src/cpg_flow_stripy/jobs/: stripy.py
src/cpg_flow_stripy/scripts/: indexer.py  make_stripy_html.py  make_stripy_index.py  make_stripy_reports.py  subsetting_jsons.py
src/cpg_flow_stripy/templates/: index.html.jinja
test/: test_index_generator.py  test_some_functionality.py
