[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='cpg_flow_stripy'
description='STR calling and report generation, implemented in CPG-Flow'
readme = "README.md"
requires-python = ">=3.10,<3.11"
version="0.2.1"
license={ "file" = "LICENSE" }
classifiers=[
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies=[
    'cpg-flow~=1.2',
]

[project.urls]
Repository = "https://github.com/populationgenomics/cpg-flow-stripy.git"

[project.optional-dependencies]
test = [
    'bump-my-version',
    'pre-commit',
    'pytest',
]

[project.scripts]
run_workflow = 'cpg_flow_stripy.run_workflow:cli_main'

[tool.hatch.build.targets.wheel]
packages = ["src/cpg_flow_stripy"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[options]
include_package_data = true

[options.package_data]
'cpg_flow_stripy'=  ['config_template.toml', 'results_template.html', 'index_template.html']

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['test']

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".mypy_cache", ".venv", "build", "dist"]

[tool.ruff.format]
indent-style = 'space'
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"src/cpg_flow_stripy/stages.py" = ["ARG002"]

[tool.ruff.lint]
# ignore pydocstyle, flake8-boolean-trap (FBT)
select = ["A", "B", "C", "E", "F", "G", "I", "I001", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "I001", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "FBT", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN101", # Missing type annotation for self argument
    "ANN201", # Missing return type annotation for public function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "ANN204", # Missing type annotation for special method `__init__`
    "COM812", # Trailing comma prohibited
    "G004", # Logging statement uses f-string
    "PLW0603", # Using the global statement to update `<VAR>` is discouraged
    "Q000", # Single quotes found but double quotes preferred
    "PLR0913", # Too many arguments in function (> 5)
    "N999", # invalid module name (not lower-case and potholes)
    "PLR2004", # Magic value used in comparison, consider replacing with a constant
    "RUF015",# Prefer `next(iter(d.keys()))` over single element slice, I want to know which slice is being used
    "ERA001",# Remove commented-out code
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "hail", "cpg", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
cpg = ["cpg-flow", "cpg-utils"]
hail = ["hail"]

[tool.bumpversion]
current_version = "0.2.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version='{current_version}'"
replace = "version='{new_version}'"

[[tool.bumpversion.files]]
filename = "README.md"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "Dockerfile"
search = "{current_version}"
replace = "{new_version}"
